Fix menu item spacing and footer heart on IE

--- a/website/static/css/footer.css
+++ b/website/static/css/footer.css
@@ -39,6 +39,7 @@
 
 .madeWith .heart {
     height: 18px;
+    width: 18px;
     vertical-align: middle;
 }
 
